# C-PAC

./: .codecov.yml  .dockerignore  .flake8  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  .pylintrc  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  EPI_DistCorr.py  LICENSE  MANIFEST  MANIFEST.in  README.md  Singularity  Singularity.latest-ABCD-HCP  Untitled.ipynb  bids_utils.py  build_helpers.py  config_fctest.py  conftest.py  cpac_install.sh  cpac_pipeline.py  crash-20120901-010757-ssikka-calculate_centrality.a0.b0.c0.a0.c0.c0.c0.a0.npz  crash-20120901-010757-ssikka-calculate_centrality.a0.b0.c0.a0.c0.c0.c0.a1.npz  default_pipeline.yaml  functional_tab.py  index.html  params.json  pipe-test_all.yml  pipe-test_ci.yml  pipeline_config_cpac_default.yml  pyproject.toml  required_afni_pkgs.txt  requirements.txt  run.py  sample_pipeline_configuration.yaml  setup.py  (+11 more)
.circleci/: config.yml  config.yml.orig  main.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  README.md  READTHIS.md  dependabot.yaml  test_data.yml
.github/Dockerfiles/: AFNI.16.2.07-xenial.Dockerfile  AFNI.23.0.04-jammy  (+74 more)
C-PAC-master/: LICENSE
CPAC/: EPI_DistCorr.py  __init__.py  __main__.py  anat_preproc.py  conftest.py  cpac_resources.tgz  info.py  registration.py  setup.py
PyPEER/: README.md  setup.py
benchmarks/: sca_profiler.py
configs/: CPAC_participant_list.yml  config.py  config.yml  config_fsl.py  config_fsl.yml  data_config.py  data_config.yml  group_analysis_config.yml  pipeline_config.yml  scan_parameters.csv  scan_parameters_multiscan.csv
dev/: build_docker.sh  bump_version.sh  create_ami.sh  generate_singularity.sh
doc/: conf.py  index.rst  make.bat
docs/: description.rst  index.rst
scripts/: README.md  autoversioning.sh  config_extractor.py  cpac  cpac_centrality.py  cpac_cli.py  cpac_data_config_setup.py  cpac_extract_parameters.py  cpac_gui  cpac_install.sh  cpac_rerun_after_preproc.py  cpac_run.py  cpac_setup.py  extract_parameters.py  log_py2js.py  nodeblock_docs.py  qpp_cli  qpp_cli.py
test/: __init__.py  cpac_pipeline.py  test_all.py
tests/: __init__.py
tools/: README.txt  cpac_run.py  cpac_setup.py  extract_data_diff_scan.py  extract_data_multiscan_params.py  extract_parameters.py  scan_parameters_multiscan_params_template.csv
(+1171 files in other folders)
